--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "typescript": "latest",
     "@types/react": "latest",
     "@types/react-dom": "latest",
+    "@types/node": "latest",
     "eslint": "latest",
     "eslint-config-next": "latest"
   }
